--- a/gb/23/9/9/n14070053.md
+++ b/gb/23/9/9/n14070053.md
@@ -1,60 +1,49 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>称武汉病毒为“中共病毒”北京教授被判刑</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/Unknown-13-600x400.jpg" />
 <h6>北京科技大学退休教授陈兆志曾经在维权过程中被警察打伤。（大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年09月09日讯】<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8C%97%E4%BA%AC%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.md#1">北京科技大学</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%80%80%E4%BC%91%E6%95%99%E6%8E%88.md#1">退休教授</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%99%88%E5%85%86%E5%BF%97.md#1">陈兆志</a>因在网上说“武汉病毒不是中国病毒，是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>”，被中共当局称长期羁押。一直到9月8日，陈兆志才被以所谓的“寻衅滋事罪”判刑3年6个月，判刑第二天就刑满。</p>
-<p>9月8日，维权网报导，当日获得消息称，已被羁押3年6个月的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8C%97%E4%BA%AC%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.md#1">北京科技大学</a>退休教师<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%99%88%E5%85%86%E5%BF%97.md#1">陈兆志</a>8日宣判，被以寻衅滋事罪判刑3年6个月，而且9月9日就刑满。</p>
+	<p>【大纪元2023年09月09日讯】北京科技大学退休教授陈兆志因在网上说“武汉病毒不是中国病毒，是中共病毒”，被中共当局称长期羁押。一直到9月8日，陈兆志才被以所谓的“寻衅滋事罪”判刑3年6个月，判刑第二天就刑满。</p>
+<p>9月8日，维权网报导，当日获得消息称，已被羁押3年6个月的北京科技大学退休教师陈兆志8日宣判，被以寻衅滋事罪判刑3年6个月，而且9月9日就刑满。</p>
 <p>报导说，陈兆志被中共当局关押三年半，出狱后生活能否自理、病情能否好转都是问题。</p>
 <p>此前，陈兆志在狱中健康状况恶化，腰腿疼痛，驼背，阿尔茨海默症更加严重，思维不清晰，沟通困难。律师曾为此多次申请取保但都无果。</p>
-<p>现年71岁的陈兆志是北京科技大学<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%80%80%E4%BC%91%E6%95%99%E6%8E%88.md#1">退休教授</a>，被指是中国知识产权维权第一人。他曾为六四受害者发声，要求中共官员公示财产，并公开表达对体制的不满，因此而遭到打压，多次被抓捕。</p>
-<p>2020年初，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>爆发之际，中共将病毒命名为“新冠病毒”。陈兆志就“新冠病毒”来源之争发表评论，并直言“武汉肺炎”是“中共制造”，并批评中共隐瞒疫情及处置不当。该年3月，陈兆志被以涉嫌寻衅滋事罪羁押在北京海淀区看守所，其被控罪的言论包括“武汉病毒不是中国病毒，是中共病毒”等。他认为这是中共的政治迫害，侵害其言论自由，因此拒绝在审讯笔录上签字。</p>
+<p>现年71岁的陈兆志是北京科技大学退休教授，被指是中国知识产权维权第一人。他曾为六四受害者发声，要求中共官员公示财产，并公开表达对体制的不满，因此而遭到打压，多次被抓捕。</p>
+<p>2020年初，中共病毒爆发之际，中共将病毒命名为“新冠病毒”。陈兆志就“新冠病毒”来源之争发表评论，并直言“武汉肺炎”是“中共制造”，并批评中共隐瞒疫情及处置不当。该年3月，陈兆志被以涉嫌寻衅滋事罪羁押在北京海淀区看守所，其被控罪的言论包括“武汉病毒不是中国病毒，是中共病毒”等。他认为这是中共的政治迫害，侵害其言论自由，因此拒绝在审讯笔录上签字。</p>
 <p>2021年3月18日，陈兆志的案子开庭，从上午持续到中午，但未当庭宣判。当时，现场人士被安保警告院内不准进入，正在审理大案。</p>
 <p>陈兆志的辩护律师马纲权2021年对自由亚洲电台表示，“一天都不该关他。本来宪法就有规定，公民有言论自由的权利，他不过是发表了个人言论，践行了宪法第三十五条赋予公民的权利。公安机关没有权力抓他，一天都不该关。当地派出所也知道陈老师有老年痴呆症，别说陈老师是无罪，他要真是有犯罪行为都不应该接受处罚。”</p>
 <p>责任编辑：萧律生#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081004.md#1">南京异见人士邵明亮遭绑架失联</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080902.md#1">中共关押王建兵、黄雪琴 英国务大臣：不公正</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080662.md#1">“一人一推”周年 志愿者：做勇者的精神推手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14079447.md#1">20年冤狱后 法轮功学员李文明再遭冤判5年</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422743.md#1">中国新年将临 大陆暴雪地震来袭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422553.md#1">江苏维权人吴继新拉条幅“反对共产党”遭拘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422122.md#1">中共党魁视察辽宁 作家孙大骆被警察骚扰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421941.md#1">肝25万肾20万 天津卫健委对器官明码标价惹议</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/2/n11084381.md#1" target="_blank">林辉：中共这些“特别党员”效力后自取其辱</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/28/n8535217.md#1" target="_blank">年轻秘书长年病号 幸遇法轮大法无药而愈</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/9/n11034634.md#1" target="_blank">林辉：样板戏李玉和阿庆嫂等扮演者的命运</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/2/24/n4647598.md#1" target="_blank">在法轮大法修炼中重生的宁德人（一）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076236.md#1">【未解之谜】《推背图》46象 即将应验的预言？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14078897.md#1">【未解之谜】魏斯博士（上）看到地球未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074471.md#1">仁心君子：救助仇人活命  不爱宰相高位爱真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075537.md#1">秋分：彼岸日 天地阴阳调和</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020684.md#1">流落香港的“菠萝油公主”  天涯海角总有人伴你“等风来”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081019.md#1">【新闻大破解】共军敌情异常 美多线实战化部署</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081138.md#1">【新唐人快报】越南开发稀土矿场 挑战中共垄断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080903.md#1">【新闻大家谈】两大因素左右美国大选结果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080182.md#1">中共耗资2千亿办亚运 《杭州，为你羞耻》再传</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080303.md#1">世界上最古老的木结构建筑早于人类文明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079877.md#1">邓朴方去职 习近平或对更多太子党开刀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080019.md#1">徐新洋大婚宴开35桌 徐乃麟买单喊话想抱孙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080305.md#1">范冰冰任西班牙影展评审 开幕红毯造型成焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080342.md#1">为何不上常驻综艺？刘诗诗回应获夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080166.md#1">简廷芮大婚感动洒泪 新郎晒甜蜜：眼里只有她</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080359.md#1">睽违4年返港 吴彦祖自曝遭爱女揶揄不再当红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14074775.md#1">他一年甩30公斤 脂肪肝消失 秘诀是吃2种食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061511.md#1">忧郁症是心灵感冒 中医师建议从三方面入手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14075086.md#1">他汀药物具鲜为人知危险  1种维生素可完美代替</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079774.md#1">8月全美租金连4降 西部降幅最多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079734.md#1">美国面临缺房危机 后院运动正在兴起</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/9/n14070053.htm">称武汉病毒为“中共病毒”北京教授被判刑</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070053.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403677.md#1">善恶有报：泯没良心 恶妇当下变动物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405472.md#1">辛生得神示 改邪归正得福报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的人是如何过年的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421611.md#1">【佳音时刻】川普施压俄停战 中共砸钱市场冷对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422181.md#1">【菁英论坛】中共谋划对美交易 习普谁先卖谁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421729.md#1">【车评】本田首部电车 2025 Honda Prologue Elite</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420914.md#1">台湾茶叶大使许正龙的“泡茶密码”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420923.md#1">夏洛山：建全球最大填海机场 中共做赔本买卖？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420869.md#1">川普废止出生公民权行政令 被法官暂停执行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420977.md#1">王宝强加入周润发跑友圈 为角色成功减重30斤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420918.md#1">刘晓庆：不知自己真实年龄 感觉自己适合属虎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421651.md#1">遭封杀3年 邓伦不露脸不具名拍杂志试水复出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420870.md#1">奥斯卡入围名单揭晓 《璀璨女人梦》成大赢家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421408.md#1">遭CP粉要求认爱金智媛 金秀贤以一句话回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421953.md#1">世界最短电扶梯在日本 只有5阶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421359.md#1">为什么航空公司租轮胎给飞机使用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421775.md#1">草饲牛肉和榖饲牛肉有什么区别？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420499.md#1">这7个下班后的习惯 会让你在工作时分心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418374.md#1">头发越来越少怎么办？3茶饮5穴位养发</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/9/n14070053.htm">称武汉病毒为“中共病毒”北京教授被判刑</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/9/9/n14070053.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
